# boilerplate-python-fastapi

./: .dockerignore  .env.example  .gitguardian.yml  .gitignore  Dockerfile  README.md  SPEC.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_oauth_fields.py
src/: config.py  database.py  exception_handlers.py  exceptions.py  logging_config.py  main.py  pagination.py  worker.py
src/api/v1/: router.py  uploads.py
src/auth/: dependencies.py  oauth.py  password.py  router.py  schemas.py  service.py  utils.py
src/middleware/: request_id.py
src/models/: refresh_token.py  user.py
src/repositories/: __init__.py  base.py  refresh_token.py  user.py
src/storage/: s3.py  schemas.py
src/tasks/: __init__.py  celery_email.py  email.py
tests/: conftest.py  factories.py  test_api_client.py  test_auth.py  test_background_tasks.py  test_celery_email.py  test_dependencies.py  test_exception_handlers.py  test_factories.py  test_oauth.py  test_pagination.py  test_password.py  test_rate_limit.py  test_repository.py  test_request_id_middleware.py  test_s3_upload.py  test_versioned_router.py
workflow-templates/: ci.yml
