[project]
name = "boilerplate-python-fastapi"
version = "0.1.0"
description = "Production-grade FastAPI boilerplate"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.16.0",
    "asyncpg>=0.30.0",
    "pydantic-settings>=2.9.0",
    "structlog>=25.4.0",
    "python-jose[cryptography]>=3.5.0",
    "argon2-cffi>=25.1.0",
    "python-multipart>=0.0.20",
    "email-validator>=2.2.0",
    "authlib>=1.4.0",
    "httpx>=0.28.0",
    "itsdangerous>=2.2.0",
    "slowapi>=0.1.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "httpx>=0.28.0",
    "ruff>=0.11.0",
    "mypy>=1.17.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
