[project]
name = "boilerplate-python-fastapi"
version = "0.1.0"
description = "Production-grade FastAPI boilerplate"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.16.0",
    "asyncpg>=0.30.0",
    "pydantic-settings>=2.9.0",
    "structlog>=25.4.0",
    "python-jose[cryptography]>=3.5.0",
    "argon2-cffi>=25.1.0",
    "python-multipart>=0.0.20",
    "email-validator>=2.2.0",
    "authlib>=1.4.0",
    "httpx>=0.28.0",
    "itsdangerous>=2.2.0",
    "slowapi>=0.1.9",
    "celery[redis]>=5.5.0",
    "boto3>=1.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.11.0",
    "mypy>=1.17.0",
    "boto3-stubs[s3]>=1.35.0",
    "faker>=37.0.0",
    "factory-boy>=3.3.0",
    "pytest-factoryboy>=2.7.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-report=html:htmlcov --cov-fail-under=80"

[tool.coverage.run]
source = ["src"]
omit = [
    "src/__init__.py",
    "*/migrations/*",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "if __name__ == .__main__.:",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
